# skills

./: .MASTER_LOG.csv  .MASTER_SCHEMA.json  .Skill_Index.json  .agent.md  .env  .gitignore  .mcp.json  AGENTS.md  API_CONTRACTS.md  Agent Skills技能详细介绍.md  Agent-Skills-实战指南.md  BEFORE_AFTER_EXAMPLES.md  BILINGUAL_CONVERSION_REPORT.md  BILL_OF_QUANTITIES_SETUP.md  CLAUDE.md  CODESPACES_SETUP.md  COMPREHENSIVE_SCHEMATIC.md  CONSTRUCTION_PROJECT_MANAGEMENT_SETUP.md  CONTRIBUTING.md  CONTRIBUTION_GUIDE.md  CONTRIBUTION_MANIFEST.md  CONTRIBUTION_NOTES.md  COPILOT_WAS_HERE.json  EASY_START.md  EVIDENCE_CARD_FLOW.md  EXECUTIVE_SUMMARY.md  FILE_INVENTORY.md  FINAL_SUMMARY.md  FINAL_VALIDATION_REPORT.md  HEALTHCARE_QUICKSTART.md  INDEX.md  MASTER_LOG.md  Makefile.skills  NINE_PATH_PROMPT_FLOW.md  PLAYWRIGHT_GUIDE.md  PROJECT_SUMMARY.md  QA_CHECKLIST.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  (+54 more)
.INSTRUCTIONS-START-HERE/: SKILL.md
.claude/: HEALTHCARE.md  ecc-tools.json  identity.json  settings.json  settings.local.json
.claude-plugin/: marketplace.json
.codex/: AGENTS.md
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  labeler.yml  labels.yml
.gnosis/: scanner-findings.md
.jules/: bolt.md
HubStation/: CHECK-FILES.bat  CHECK-FILES.ps1  HubStation.ps1  Reflections.psm1  START.bat  Start-HubStation.ps1  TEST.bat  auto-monitor.ps1  hub_config.json  test-hubstation.ps1
PIMP-SMACK-APP/: CHEAT_SHEET.md  CLAUDE XML research.xml  GEMINI_BUILD_PROMPT.md  INTAKE_FORM.md  LEGAL_XML_TAGS.json  LICENSE  MASTER_CASE_CONFIG.json  MASTER_SCHEMA.json  README_MASTER.md  SKILL.md
_shared/: LEGAL_DOCUMENT_DRAFTING_MAP.md
adapters/: CONVERSION_COMPLETE.md
adobe-react-spectrum-design/: SKILL.md
agent-skill-planner/: SKILL.md
agents/: reality-check.yaml  tangent.md
ai-advisor-workflow/: README.md  SKILL.md  requirements.txt  test_workflow.py  trigger_words_config.yaml  workflow_cli
ai-voice-chat/: README.md  SKILL.md  index.html  server.py
ai-voice-chat-replit/: .replit  README.md  index.html  main.py  requirements.txt
alex-pedersen/: SKILL.md
api-documentation-writer/: SKILL.md
backend/: pyproject.toml
billing-documents/: README.md  SKILL.md
character-board/: README.md
code-reviewer/: SKILL.md
comfyui-integration/: SKILL.md
comparison-table-v2/: README.md  SKILL.md
competitive-analysis/: SKILL.md
consulting-contract-generator/: SKILL.md
contract-analyzer/: SKILL.md
create-skill/: SKILL.md
cross-platform-deployment/: SKILL.md
daily-report-voice/: SKILL.md
data-cleaner/: SKILL.md
deal-machine-mcp/: package-lock.json  package.json  test-api-simple.js  test-api.js  test-client.js
declaration-builder/: SKILL.md
decomposed-prompting-system/: SKILL.md
deep-dive/: README.md  SKILL.md
docs/: SKILL-CONFIGURATION-GUIDE-EN.md  SKILL-CONFIGURATION-GUIDE.md  index.html
element-selection-framework/: SKILL.md
finance-assistant/: .gitignore  HOLDINGS_SYNC.md  README.md  config.py  sync_holdings.py
flux-kontext-model/: SKILL.md
gantt-chart-generator/: SKILL.md
gguf-quantization/: SKILL.md
gold-accumulation-trading/: README.md  SKILL.md  report_20260302.md
hearing-sheet-generator/: SKILL.md
huggingface-diffusers/: SKILL.md
industry-dynamics-trends/: SKILL.md
jony-ive-design-system/: SKILL.md
knowledge/: SKILL.md
landing-page-builder/: package-lock.json  package.json
lead-research-assistant/: LICENSE.txt  README.md  SKILL.md
macros/: AutomateBrief.vba  RecordIndexGenerator.vba
manual-generator/: README.md  SKILL.md
mcp-builder/: INSTALLING_MCP_SERVERS.md  SKILL.md
meeting-to-tasksheet/: INSTALL.md  README.md  SKILL.md
mermaid-flow-generator/: README.md  SKILL.md
modal-serverless-api/: SKILL.md
model-distribution-management/: SKILL.md
monthly-report-generator/: SKILL.md
music-production-strategy/: HIT_SONG_PRODUCTION_STRATEGY.md  PRODUCTION_BIBLE.md  PRODUCTION_TOOLKIT.md
music-video-note-editor/: README.md  app.js  index.html  midi-handler.js  practice-mode.js  score-renderer.js  styles.css  transcription-handler.js
ncbi-database-skill/: LICENSE  skill.json
nda-generator/: SKILL.md
ninth-circuit-brief-body/: SKILL.md
ninth-circuit-cover/: LICENSE.txt  SKILL.md
ninth-circuit-declaration/: SKILL.md
ninth-circuit-opening-brief/: ASSEMBLE_BRIEF.bat  SKILL.md  ingest_brief_sections.py
npx skills add anthropics/: skills
objectbox/: SKILL.md
parallel-skill-generator/: README.md  SKILL.md  parallel-workflow.md  parse-csv.js
piano-momentum-music-guide/: SKILL.md
pith/: README.md  SKILL.md
plugins/ai-mcp-open-responses/skills/rust-open-responses-engine/templates/: Cargo.toml  Dockerfile  README.md  config.toml  docker-compose.yml
pre-deploy-validator/: .eslintrc.json  .gitignore  README.md  package-lock.json  package.json
product-spec-builder/: SKILL.md
profession-skill-generator/: SKILL.md
project-insights-skill/: .gitignore  LICENSE  QUICKSTART.md  README.md  SKILL.md
pyinstaller-ml-packaging/: SKILL.md
pyo3-rust-python-bindings/: SKILL.md
python-architect/: SKILL.md
python-desktop-ml-backend/: SKILL.md
pytorch-desktop-inference/: SKILL.md
qwen-image-edit/: SKILL.md
react-typescript-development/: SKILL.md
remotion-video-creator/: SKILL.md
rocq-prover/: LICENSE.txt  README.md  SKILL.md
sadp/: SKILL.md
sales-analyzer-xlsx/: SKILL.md
scripts/: .SKILL_INDEX_DEFINITIONS.md  SKILLS_INVENTORY.md  archive_outbox.py  build_index.py  build_index_enhanced.py  build_model_execution_guide.py  generate_declaration_with_cover.py  generate_linking_macro.py  generate_wiki.py  ingest_legal_text.py  legal_styles_strict.json  merge_docs.py  schema_builder.py  (+6 more)
skills/python-testing-tools/assets/: conftest.py  justfile  pyproject.toml  pytest.ini
swml-core/: Cargo.toml  README.md
swml-core/docs/: architecture.md
swml-core/examples/: basic_usage.rs
swml-core/src/: algebra.rs  axioms.rs  lib.rs  omega.rs  phases.rs  spaces.rs
swml-core/tests/: integration_test.rs
tts-livekit-plugin/plugin/: __init__.py  melotts_plugin.py  pyproject.toml  requirements.txt
(+3579 files in other folders)
